MEDIUM: re-work Dockerfile to contain compiled binary for check

--- a/check-commit/Dockerfile
+++ b/check-commit/Dockerfile
@@ -1,5 +1,13 @@
+FROM golang:alpine as builder
+RUN mkdir /build
+ADD . /build/
+WORKDIR /build
+RUN go build -o check check.go
+
 FROM golang:alpine
 LABEL maintainer="mmhedhbi@haproxy.com"
-COPY check.go /
-ENTRYPOINT ["go","run","/check.go"]
+RUN apk add git
+COPY --from=builder /build/check /check
+WORKDIR /
+ENTRYPOINT ["/check"]
 
