--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,19 +19,5 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/checkout@v2
-        with:
-          ref: master
-
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.15
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          export
-          git show-ref
-          git clone -b git_envs https://github.com/aiharos/github-actions.git
-          cd github-actions/check-commit; go run check.go "../../."
+      - name: check-commit
+        uses: docker://aiharos/check-commit:latest
