--- a/check-commit/Dockerfile
+++ b/check-commit/Dockerfile
@@ -4,9 +4,8 @@ ADD . /build/
 WORKDIR /build
 RUN go build -o check check.go
 
-FROM golang:alpine
+FROM alpine:latest
 LABEL maintainer="mmhedhbi@haproxy.com"
-RUN apk add git
 COPY --from=builder /build/check /check
 WORKDIR /
 ENTRYPOINT ["/check"]
