--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -8,18 +8,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
-  check_commit:
-    if: ${{ github.event_name == 'pull_request' }}
-    name: HAProxy check commit message
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: check-commit
-        uses: docker://haproxytech/check-commit:latest
-        env:
-          API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   go_build:
     name: Go build
     runs-on: ubuntu-latest
@@ -41,7 +29,7 @@ jobs:
   go_test:
     name: Go test
     runs-on: ubuntu-latest
-    needs: ["go_lint"]
+    needs: ["go_build"]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-go@v2
@@ -54,3 +42,20 @@ jobs:
     - name: Build
       run: |
         go test ./...
+  check_commit:
+    if: ${{ github.event_name == 'pull_request' }}
+    name: HAProxy check commit message
+    runs-on: ubuntu-latest
+    needs: ["go_build"]
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Set up Go 1.17
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.17
+    - name: check-commit
+      run: go build -o check && ./check
+      env:
+        API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
